--- a/home/desktop/programs/waybar/style.css
+++ b/home/desktop/programs/waybar/style.css
@@ -9,6 +9,8 @@
 window#waybar {
     border-bottom: none;
     color: @base05;
+    opacity: 0.8;
+    padding-bottom: 2px;
 }
 
 window#waybar > box {
