--- a/home/desktop/programs/waybar/style.css
+++ b/home/desktop/programs/waybar/style.css
@@ -9,11 +9,13 @@
 window#waybar {
     border-bottom: none;
     color: @base05;
-    padding-bottom: 2px;
+    border-radius: 5px;
 }
 
 window#waybar > box {
     padding: 2px 8px;
+    margin-top: 7px;
+    margin-bottom: 7px;
     opacity: 0.8;
 }
 
